# repetier-server-discord-bridge

./: Cargo.toml  LICENSE  README.md
src/: discord_client.rs  main.rs
